css/base.css
/* CSS Grid and Utility System */
.container {
	width: 95%;
	padding: 2px 8px;
	margin: auto auto;
	overflow: hidden;
}

/* grids */
.row {
	width: 100%;
	display: block;
	overflow: hidden;
}

.col-small-1, 
.col-small-2, 
.col-small-3,
.col-small-4, 
.col-small-5, 
.col-small-6,
.col-small-7, 
.col-small-8, 
.col-small-9,
.col-small-10, 
.col-small-11, 
.col-small-12,
.col-medium-1,
.col-medium-2,
.col-medium-3,
.col-medium-4,
.col-medium-5,
.col-medium-6,
.col-medium-7,
.col-medium-8,
.col-medium-9,
.col-medium-10,
.col-medium-11,
.col-medium-12,
.col-large-1,
.col-large-2,
.col-large-3,
.col-large-4,
.col-large-5,
.col-large-6,
.col-large-7,
.col-large-8,
.col-large-9,
.col-large-10,
.col-large-11,
.col-large-12 {
	width: 98%;
	display: inline;
	float: left;
	margin: 0 1%;
	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
	box-sizing: border-box;         /* Opera/IE 8+ */

}

/* Media Queries */
/* phones and some small tablets */
@media only screen and (min-width: 450px) {
	.col-small-1 {
		width: 6.333333%;
	} 
	.col-small-2 {
		width: 14.666666%;
	}
	.col-small-3 {
		width: 22.9999%;
	} 
	.col-small-4 {
		width: 31.3333%;
	}
	.col-small-5 {
		width: 39.6666%;
	} 
	.col-small-6 {
		width: 47.9999%;
	}
	.col-small-7 {
		width: 56.3333%;
	} 
	.col-small-8 {
		width: 64.6666%;
	}
	.col-small-9 {
		width: 72.9999%;
	} 
	.col-small-10 {
		width: 81.3333%;
	}
	.col-small-11 {
		width: 89.6666%;
	} 
}

/* some tablets */
@media only screen and (min-width: 768px) {
	.col-medium-1 {
		width: 6.3333%;
	} 
	.col-medium-2 {
		width: 14.6666%;
	}
	.col-medium-3 {
		width: 22.9999%;
	} 
	.col-medium-4 {
		width: 31.3333%;
	}
	.col-medium-5 {
		width: 39.6666%;
	} 
	.col-medium-6 {
		width: 47.9999%;
	}
	.col-medium-7 {
		width: 56.3333%;
	} 
	.col-medium-8 {
		width: 64.6666%;
	}
	.col-medium-9 {
		width: 72.9999%;
	} 
	.col-medium-10 {
		width: 81.3333%;
	}
	.col-medium-11 {
		width: 89.6666%;
	} 
}
/* desktops */
@media only screen and (min-width: 970px) {
	.col-large-1 {
		width: 6.3333%;
	} 
	.col-large-2 {
		width: 14.6666%;
	}
	.col-large-3 {
		width: 22.9999%;
	} 
	.col-large-4 {
		width: 31.3333%;
	}
	.col-large-5 {
		width: 39.6666%;
	} 
	.col-large-6 {
		width: 47.9999%;
	}
	.col-large-7 {
		width: 56.3333%;
	} 
	.col-large-8 {
		width: 64.6666%;
	}
	.col-large-9 {
		width: 72.9999%;
	} 
	.col-large-10 {
		width: 81.3333%;
	}
	.col-large-11 {
		width: 89.6666%;
	} 
}
/* overrides */
hr { 
	background-color: #cccccc;
	height: 1px; border: 0;
}
/* utility class */
small { 
	font-size: 75%;
	font-weight: lighter;
	}

